--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head><title>Oddlect</title></head>
 <link rel = "stylesheet" type = "text/css" href = "Oddlect.css">
+<link rel="shortcut icon" type="image/png" href="oddlectIcon.png"/>
 <script src = "Oddlect.js"></script>
 <body>
 <div id = "main">
