--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <span id = "title">
 <span>
 <div id = "left">
-<button id = "numL" onclick = "clickL()">Click Start</button>
+<button id = "numL" onclick = "clickL()">Start</button>
 	
 </div>
 <div id = "right">
-<button id = "numR" onclick = "clickR()">Click Start</button>
+<button id = "numR" onclick = "clickR()">Start</button>
 <div id = "start">
 		<hr>
 		<button onclick = "start()") id = "btnStart" class = "useless">Start</button>
