--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<hr>
 		<button onclick = "start()") id = "btnStart" class = "useless">Start</button>
 		<hr>
-		<div id = "baroutline">
+		<div id = "barProgress">
 		<div id = "bar">
 			<p id = "timer">Time: 0</p>
 		</div>
