--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <span id = "title">
 <span>
 <div id = "left">
+<div id = "games-container">
+	<p id = "games">Games</p>
+	<p id = "oddlect"><a id = "aOddlect" href = "https://danimals67.github.io/SimonSays/">Simon Says</a></p>
+	<p id = "soon"><a id = "aOddlect" href = "#">Coming Soon</a></p>
+	<p id = "soon"><a id = "aOddlect" href = "#">Coming Soon</a></p>
+ </div>
 <button id = "numL" onclick = "clickL()">Start</button>
 	
 </div>
