--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<p id = "games">Games</p>
 	<p id = "oddlect"><a id = "aOddlect" href = "https://danimals67.github.io/SimonSays/">Simon Says</a></p>
 	<p id = "connect"><a id = "aOddlect" href = "https://danimals67.github.io/Connect4/">Connect 4</a></p>
-	<p id = "soon"><a id = "aOddlect" href = "#">Coming Soon</a></p>
+	<p id = "melee"><a id = "aOddlect" href = "https://danimals67.github.io/MeleeClicker">Melee Clicker</a></p>
  </div>
 <button id = "numL" onclick = "clickL()">Start</button>
 	
